# borodin_ms_215

./: .gitignore  README.md
examples/: vector.c  vector.h
lab1/: CMakeLists.txt  README.md  array.h  main  main.c
lab2/: CMakeLists.txt
lab2/source/: CMakeLists.txt  main.cpp
lab2/source/array/: dynamic_array.tpp
lab2/source/list/: linked_list.h  linked_list.tpp
lab2/source/matrix/: rect_matrix.h  rect_matrix.tpp
lab2/source/sequence/: array_sequence.h  array_sequence.tpp  list_sequence.h  list_sequence.tpp
lab2/source/vector/: vector.h
lab3/: CMakeLists.txt
lab3/source/: CMakeLists.txt  main.cpp  main2.cpp
lab3/source/array/: dynamic_array.h  dynamic_array.tpp
lab3/source/extrafunctions/: extrafunctions.h
lab3/source/heap/: heap.h  heap.tpp
lab3/source/person/: person.h
lab3/source/sequence/: array_sequence.h  sequence.h
lab3/source/set/: set.h  set.tpp
