add_executable(${CMAKE_PROJECT_NAME}_run
        list/linked_list.h list/linked_list.tpp main.cpp array/dynamic_array.h array/dynamic_array.tpp sequence/sequence.h sequence/array_sequence.h sequence/array_sequence.tpp sequence/list_sequence.h sequence/list_sequence.tpp vector/vector.h matrix/rect_matrix.h matrix/rect_matrix.tpp)
