
add_executable(${CMAKE_PROJECT_NAME}_run

        main.cpp
        array/dynamic_array.h
        array/dynamic_array.tpp
        sequence/sequence.h
        sequence/array_sequence.h
        sequence/array_sequence.tpp

        heap/heap.h heap/heap.tpp set/set.h set/set.tpp extrafunctions/extrafunctions.h person/person.h main2.cpp)